<resources>
    <string name="app_name">Play Juegos</string>
    <string name="play_button">PLAY</string>
    <string name="new_player_button">NEW PLAYER</string>
    <string name="preferences_button">PREFERENCES</string>
    <string name="about_button">ABOUT</string>
    <string name="name_edittext">Name</string>
    <string name="phoneticName_edittext">Phonetic name</string>
    <string name="nickname_edittext">Nickname</string>
    <string name="change_button">CHANGE</string>
    <string name="phone_edittext">Phone</string>
    <string name="mail_edittext">E-mail</string>
    <string name="action_settings">Settings</string>
    <string name="action_buscar">Buscar</string>
    <string name="action_add">Add</string>
    <string name="play_juegos">Play Juegos</string>
    <string name="play">PLAY</string>
    <string name="new_player">NEW PLAYER</string>
    <string name="preferences">PREFERENCES</string>
    <string name="about">ABOUT</string>
    <string name="elige_una_opci_n">Elige una opción:</string>
    <string name="angry_birds">Angry Birds</string>
    <string name="dragon_fly">Dragon Fly</string>
    <string name="hill_climbing_racing">Hill Climbing Racing</string>
    <string name="radiant_defense">Radiant Defense</string>
    <string name="ninja_jump">Ninja Jump</string>
    <string name="pocket_soccer">Pocket Soccer</string>
    <string name="air_control">Air Control</string>
    <string name="fab_description">FAB description</string>
    <string name="plataformas">Plataformas:</string>
    <string name="g_neros">Géneros:</string>
    <string name="fab_search">fab_search</string>
    <string name="acci_n">Acción</string>
    <string name="aventura">Aventura</string>
    <string name="deportes">Deportes</string>
    <string name="disparos">Disparos</string>
    <string name="estrategia">Estrategia</string>
    <string name="lucha">Lucha</string>
    <string name="musical">Musical</string>
    <string name="rol">Rol</string>
    <string name="simulaci_n">Simulación</string>
    <string name="note1">Acción</string>
    <string name="note2">Aventura</string>
    <string name="note3">Deportes</string>
    <string name="note4">Disparos</string>
    <string name="note5">Estrategia</string>
    <string name="note6">Lucha</string>
    <string name="note7">Musical</string>
    <string name="note8">Rol</string>
    <string name="note9">Simulación</string>
</resources>