<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grisFondo">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/Base.Theme.MiTema"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/play_juegos"
            android:textColor="#4B4B4B"
            android:textSize="34sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:text="@string/play"
            app:backgroundTint="@null"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button1"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/button_background"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@color/white"
            app:backgroundTint="@null"
            android:gravity="center"
            android:text="@string/new_player"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button2"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/button_background"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@color/white"
            app:backgroundTint="@null"
            android:gravity="center"
            android:text="@string/preferences"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button3"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/button_background"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@color/white"
            app:backgroundTint="@null"
            android:gravity="center"
            android:text="@string/about"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>