<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/grisFondo">

<androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="?attr/colorPrimary"
    app:popupTheme="@style/Base.Theme.MiTema"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintTop_toBottomOf="@+id/toolbar"
    app:layout_constraintBottom_toBottomOf="parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginVertical="10dp"
                android:layout_marginTop="10dp"
                android:src="@mipmap/ic_launcher" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TiLayoutName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_weight="2" >

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/name_edittext"
                android:inputType="text"
                android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow>
            <View
                android:layout_width="0dp"
                android:layout_marginVertical="10dp"
                android:layout_height="match_parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TiLayoutPhonetic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_weight="2" >
            <EditText
                android:id="@+id/editTextText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginEnd="10dp"
                android:hint="@string/phoneticName_edittext"
                android:ems="10"
                android:inputType="text"
                android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

        </TableRow>

        <TableRow>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TiLayoutNickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_weight="2" >
            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginEnd="10dp"
                android:ems="10"
                android:hint="@string/nickname_edittext"
                android:inputType="text"
                android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

        </TableRow>

        <TableRow android:layout_height="98dp">
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="68dp"
                android:layout_height="55dp"
                android:adjustViewBounds="true"
                android:layout_marginVertical="10dp"
                android:maxWidth="50dp"
                android:maxHeight="50dp"
                android:src="@android:drawable/ic_menu_camera"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginVertical="10dp"
                android:layout_weight="3"
                android:background="@color/gris"
                android:src="@android:mipmap/sym_def_app_icon" />

            <Button
                android:id="@+id/button4"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginVertical="10dp"
                android:layout_weight="1"
                android:background="@color/rojoBoton"
                android:backgroundTint="@color/rojoBoton"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/change_button"
                android:textColor="@color/black"
                android:textSize="10sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </TableRow>

        <TableRow>
            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginVertical="10dp"
                android:src="@android:drawable/ic_menu_call" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TiLayoutPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_weight="2" >
            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginEnd="10dp"
                android:ems="10"
                android:hint="@string/phone_edittext"
                android:inputType="phone"
                android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

        </TableRow>

        <TableRow>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"  />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="2"
                android:layout_marginVertical="10dp" />
        </TableRow>

        <TableRow>
            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:src="@android:drawable/sym_action_email" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TiLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_weight="2" >
            <EditText
                android:id="@+id/editTextTextEmailAddress2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginEnd="10dp"
                android:ems="10"
                android:hint="@string/mail_edittext"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

        </TableRow>

    </TableLayout>
</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>